feat: criando o header e button menu

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,46 @@
-.teste {
-  background-color: red;
+.container {
+  background-color: #fff;
+}
+.header {
+  background-color: #f9f9fb;
+  padding: 50px 24px 30px 24px;
+}
+.headerTop{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.headerTopLeft {
+
+}
+.headerLeftTitle{
+  font-size: 24px;
+  font-weight: 500;
+  color: #1b1b1b;
+  margin-bottom: 8px;
+}
+.headerLeftSubtitle {
+  font-weight: 400;
+  font-size: 16px;
+  color: rgba(151, 151,151, 0.8);
+}
+.headerTopright {
+  
+}
+
+.menuButton{
+  width: 18px;
+  height: 16px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.menuButtonLine {
+  background-color: #fb9400;
+  height: 2px;
+}
+.headerBottom {
+
 }
