feat: context crate

--- a/components/SearchInput/styles.module.css
+++ b/components/SearchInput/styles.module.css
@@ -10,6 +10,9 @@
   height: 48px;
   background-color: #f9f9fb;
   border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .input {
   border: 0;
